Fixes map marker label wrapping.

--- a/scout/static/scout/css/mobile.scss
+++ b/scout/static/scout/css/mobile.scss
@@ -7,7 +7,7 @@ html.turbolinks-progress-bar::before {
 
 // google map
 
-.map-label { background: #fff; }
+.map-label { background: #fff; display: inline-block; }
 
 // scout mobile
 
